# vdmark

./: LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  global.d.ts  main.ts  styles.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/example/: rdmark.md  vdmark.md
src-tauri/icons/: icon.icns
src-tauri/lang/: en.json  zh.json
src-tauri/src/: main.rs
src-tauri/src/cmd/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/lang/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/parser/: html.rs  md.rs  mod.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/ABout/: index.scss  index.vue
src/components/Config/: index.scss  index.vue
src/components/Editor/: index.scss  index.vue
src/components/Layout/: index.vue
src/components/Layout/Titlebar/: Menu.vue  index.scss  index.vue
src/components/VdmarkEditor/: editor.ts  index.scss  index.vue
src/components/Workspace/: index.vue
src/lang/: en.ts  index.ts  menu.d.ts  zh.ts
src/store/: app.ts  editor.ts
src/utils/: index.ts
