[package]
name = "vdmark"
version = "0.0.1"
description = "A Markdown Editor App"
authors = ["cedar12.zxd@qq.com"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
shadow-rs = "0.3"

[dependencies]
tauri = { version = "1.2", features = ["clipboard-read-text", "dialog-all", "os-all", "process-relaunch", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
reqwest = { version = "0.11",features = ["blocking", "json","multipart"] }
image = "0.24.6"
mime_guess = "2.0.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
anyhow="1.0.70"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
